--- a/.travis.yml
+++ b/.travis.yml
@@ -17,15 +17,17 @@ install:
  - sudo apt-get install -qq gcc-4.8 gfortran-4.8
  - |
    if [ ${TRAVIS_PYTHON_VERSION:0:1} = 3 ]; then
-       sudo apt-get install python3-numpy python3-ase
+       sudo apt-get install python3-numpy
        pip3 install scipy
        pip3 install pytest
+       pip3 install ase
        python3 setup.py build
        python3 setup.py install
    elif [ ${TRAVIS_PYTHON_VERSION} = "2.7" ]; then
-       sudo apt-get install python-numpy python-ase
+       sudo apt-get install python-numpy
        pip2 install scipy
        pip2 install pytest
+       pip2 install ase
        python2 setup.py build
        python2 setup.py install
    else
